@@ -1,3 +1,7 @@
+Jan 11, 2006
+
+  * Fix http_get/3 with sgml plugin and proxy option.  Usenet, `mans'.
+
 Dec 10, 2005
 
   * Enhanced robustness of the server to malicious clients by using
